# Agentic-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: deploy.yml
data/documents/: andrej_karpathy.txt
nginx/: nginx.conf
src/rag_chatbot/: __init__.py  config.py  main.py
src/rag_chatbot/api/: __init__.py  dependencies.py  routes.py
src/rag_chatbot/api/routes/: __init__.py  chat.py  health.py  knowledge_base.py  web.py
src/rag_chatbot/api/schemas/: __init__.py  chat.py  knowledge_base.py
src/rag_chatbot/core/: __init__.py  exceptions.py  logging.py
src/rag_chatbot/graph/: __init__.py  nodes.py  prompts.py  state.py  workflow.py
src/rag_chatbot/rag/: __init__.py  embeddings.py  ingestion.py  reranker.py  retriever.py  types.py  vector_store.py
src/rag_chatbot/services/: __init__.py  chat.py  knowledge_base.py
src/rag_chatbot/web/static/: chat.js  styles.css
src/rag_chatbot/web/templates/: index.html
