[project]
name = "agentic-rag"
version = "0.1.0"
description = "Context-aware RAG chatbot using LangGraph, Gemini, and ChromaDB"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "langgraph>=0.4,<1",
    "langgraph-checkpoint-sqlite>=2,<3",
    "langchain-core>=0.3,<1",
    "langchain-google-genai>=2,<3",
    "langchain-chroma>=0.2,<1",
    "langchain-text-splitters>=0.3,<1",
    "pymupdf4llm>=0.0.17,<1",
    "cohere>=5,<6",
    "pydantic-settings>=2,<3",
    "jinja2>=3,<4",
    "python-multipart>=0.0.18,<1",
    "aiofiles>=24,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_chatbot"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
